--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.47.0",
     "recharts": "^3.1.0",
+    "resend": "^6.0.1",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
