--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
       "@/utils/*": ["./utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "clientapp/**/*"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "clientapp/**/*", ".next"]
 }
